--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Aquaponics</title>
+    <link type="icon" type="image/x-icon"  href="assets/icon_s.ico" />
 </head>
 <style>
 
@@ -35,7 +36,7 @@
  <div class="conmtainer-fluid">
    <div class="nav p-3">
         <div class="row nav_me">
-            <img class="col-2" id="logo" src="https://marketplace.canva.com/EAFEcdxWgeo/1/0/1600w/canva-elegant-circle-signature-photography-logo--kbTNqEWceg.jpg">
+            <img class="col-2 col-md-1" id="logo" src="assets/logos.jpg">
             <h4 class="col-3 FG2 FB1">Aquaponics</h4>
         </div>
    </div>
@@ -45,7 +46,8 @@
         <h2 class="FG2 FS1">Aquaponics</h2>
         <h2 class="FG3">automates water quality management</h2>
         <p class="FG4">Aquaponics system automates and manages environmental factors for optimal water quality, reducing human intervention.</p>
-        <button class="btn btn-warning">Donwload</button>
+        <a class="btn btn-warning" href="assets/Aquaponics-APP.apk">Donwload</a>
+        <a class="btn btn-success" target="_blank" href="https://github.com/lemueldiergos/aquaponics">Documentation</a>
     </div>
  </div>
 
